scenario002: updating volume encryption provider
https://review.openstack.org/#/c/416672 made the new luks provider required.
Let's use it.

Closes-Bug: #1658755
Change-Id: Icc7c3c933af6621959ce3e6af99c73b4afd87509

--- a/ci/pingtests/scenario002-multinode.yaml
+++ b/ci/pingtests/scenario002-multinode.yaml
@@ -81,7 +81,7 @@ resources:
     type: OS::Cinder::EncryptedVolumeType
     properties:
       volume_type: {get_resource: luks_volume_type}
-      provider: nova.volume.encryptors.luks.LuksEncryptor
+      provider: luks
       cipher: aes-xts-plain64
       control_location: front-end
       key_size: 256
