--- a/puppet/post.j2.yaml
+++ b/puppet/post.j2.yaml
@@ -21,11 +21,10 @@ parameters:
       perform configuration on a Heat stack-update.
 
 resources:
-
-{% for role in roles %}
   # Post deployment steps for all roles
   # A single config is re-applied with an incrementing step number
-  # {{role.name}} Role steps
+{% for role in roles %}
+  # {{role.name}} Role post deploy steps
   {{role.name}}ArtifactsConfig:
     type: deploy-artifacts.yaml
 
@@ -58,8 +57,6 @@ resources:
 
   # Step through a series of configuration steps
 {% for step in range(1, 6) %}
-  {% for role in roles %}
-
   {{role.name}}Deployment_Step{{step}}:
     type: OS::Heat::StructuredDeploymentGroup
   {% if step == 1 %}
@@ -77,8 +74,6 @@ resources:
       input_values:
         step: {{step}}
         update_identifier: {get_param: DeployIdentifier}
-
-  {% endfor %}
 {% endfor %}
 
   {{role.name}}PostConfig:
