Add support for upgrading ec2-api
Change-Id: I2703dd1a7e3eefa0ad6f7b74183101de6c1ad915
(cherry picked from commit b6214b0c5b92c85dbfa45007295db70888b509ab)

--- a/puppet/services/ec2-api.yaml
+++ b/puppet/services/ec2-api.yaml
@@ -115,3 +115,19 @@ outputs:
           ec2api::db::mysql::allowed_hosts:
             - '%'
             - "%{hiera('mysql_bind_host')}"
+      upgrade_tasks:
+        - name: Check if ec2-api is deployed
+          command: systemctl is-enabled openstack-ec2-api
+          tags: step0,validation
+          ignore_errors: True
+          register: ec2-api_enabled
+        - name: "PreUpgrade step0,validation: Check if openstack-ec2-api is running"
+          shell: >
+            /usr/bin/systemctl show 'openstack-ec2-api' --property ActiveState |
+            grep '\bactive\b'
+          when: ec2-api_enabled.rc == 0
+          tags: step0,validation
+        - name: Stop openstack-ec2-api service
+          tags: step1
+          service: name=openstack-ec2-api state=stopped
+
