Set the correct default for gnocchi workers
The current default is empty which overrides the puppet-gnocchi
os_workers calculated value. Instead default to the os_workers.

Change-Id: I9bf9a107c03172500f7c8c5e4353c20305c8e6b5

--- a/puppet/services/gnocchi-metricd.yaml
+++ b/puppet/services/gnocchi-metricd.yaml
@@ -22,7 +22,7 @@ parameters:
     default: 'overcloud-gnocchi-metricd'
     type: string
   GnocchiMetricdWorkers:
-    default: ''
+    default: '%{::os_workers}'
     description: Number of workers for Gnocchi MetricD
     type: string
 
