--- a/puppet/services/ceph-osd.yaml
+++ b/puppet/services/ceph-osd.yaml
@@ -46,6 +46,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceph::osd
       upgrade_batch_tasks:
+        - name: Check status
+          tags: step1,validation
+          shell: ceph health | grep -qv HEALTH_ERR
         - name: Get OSD IDs
           tags: step1
           shell: ls /var/lib/ceph/osd | awk 'BEGIN { FS = "-" } ; { print $2 }'
