--- a/puppet/services/network/contrail-heat.yaml
+++ b/puppet/services/network/contrail-heat.yaml
@@ -1,7 +1,8 @@
 heat_template_version: ocata
 
 description: >
-  OpenStack Neutron Compute OpenContrail plugin
+  Contrail Heat plugin adds Contrail specific heat resources enabling heat
+  to orchestrate Contrail
 
 parameters:
   ServiceNetMap:
@@ -19,11 +20,21 @@ parameters:
                  via parameter_defaults in the resource registry.
     type: json
 
+resources:
+  ContrailBase:
+    type: ./contrail-base.yaml
+    properties:
+      ServiceNetMap: {get_param: ServiceNetMap}
+      DefaultPasswords: {get_param: DefaultPasswords}
+      EndpointMap: {get_param: EndpointMap}
+
 outputs:
   role_data:
-    description: Role data for the Neutron Compute OpenContrail plugin
+    description: Contrail Heat plugin
     value:
-      service_name: neutron_compute_plugin_opencontrail
+      service_name: contrail_heat
       config_settings:
+        map_merge:
+          - get_attr: [ContrailBase, role_data, config_settings]
       step_config: |
-        include ::tripleo::profile::base::neutron::opencontrail::vrouter
+        include ::tripleo::network::contrail::heat
