--- a/puppet/services/network/contrail-neutron-plugin.yaml
+++ b/puppet/services/network/contrail-neutron-plugin.yaml
@@ -1,10 +1,7 @@
 heat_template_version: ocata
 
 description: >
-  Contrail Control service deployment using puppet, this YAML file
-  creates the interface between the HOT template
-  and the puppet manifest that actually installs
-  and configures Contrail Control.
+  OpenStack Neutron Opencontrail plugin
 
 parameters:
   ServiceNetMap:
@@ -21,14 +18,10 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  ContrailControlASN:
-    description: Autonomous System Number
-    type: number
-    default: 64512
-  ContrailControlRNDCSecret:
-    description: sda1/256 hmac key, e.g. echo -n "values" | openssl dgst -sha256 -hmac key -binary | base64
-    type: string
-    hidden: true
+  ContrailExtensions:
+    description: List of OpenContrail extensions to be enabled
+    type: comma_delimited_list
+    default: ''
 
 resources:
   ContrailBase:
@@ -40,14 +33,13 @@ resources:
 
 outputs:
   role_data:
-    description: Role Contrail Control using composable services.
+    description: Role data for the Neutron Opencontrail plugin
     value:
-      service_name: contrail_control
+      service_name: contrail_neutron_plugin
       config_settings:
         map_merge:
           - get_attr: [ContrailBase, role_data, config_settings]
-          - contrail::control::asn: {get_param: ContrailControlASN }
-            contrail::control::host_ip: {get_param: [ServiceNetMap, ContrailControlNetwork]}
-            contrail::control::rndc_secret: {get_param: ContrailControlRNDCSecret}
+          - neutron::api_extensions_path: /usr/lib/python2.7/site-packages/neutron_plugin_contrail/extensions
+            contrail::vrouter::contrail_extensions: {get_param: ContrailExtensions}
       step_config: |
-        include ::tripleo::network::contrail::control
+        include tripleo::network::contrail::neutron_plugin
