--- a/puppet/services/network/contrail-provision.yaml
+++ b/puppet/services/network/contrail-provision.yaml
@@ -1,10 +1,7 @@
 heat_template_version: ocata
 
 description: >
-  Contrail Control service deployment using puppet, this YAML file
-  creates the interface between the HOT template
-  and the puppet manifest that actually installs
-  and configures Contrail Control.
+  Provision Contrail services after deployment
 
 parameters:
   ServiceNetMap:
@@ -21,14 +18,6 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  ContrailControlASN:
-    description: Autonomous System Number
-    type: number
-    default: 64512
-  ContrailControlRNDCSecret:
-    description: sda1/256 hmac key, e.g. echo -n "values" | openssl dgst -sha256 -hmac key -binary | base64
-    type: string
-    hidden: true
 
 resources:
   ContrailBase:
@@ -40,14 +29,11 @@ resources:
 
 outputs:
   role_data:
-    description: Role Contrail Control using composable services.
+    description: Contrail provisioning role
     value:
-      service_name: contrail_control
+      service_name: contrail_provision
       config_settings:
         map_merge:
           - get_attr: [ContrailBase, role_data, config_settings]
-          - contrail::control::asn: {get_param: ContrailControlASN }
-            contrail::control::host_ip: {get_param: [ServiceNetMap, ContrailControlNetwork]}
-            contrail::control::rndc_secret: {get_param: ContrailControlRNDCSecret}
       step_config: |
-        include ::tripleo::network::contrail::control
+        include ::tripleo::network::contrail::provision
