Enables OpenDaylight clustering in HA deployments
Port 2550 is required for inter-ODL communication when clustering.
odl-jolokia feature is required to expose REST APIs from ODL for
monitoring the cluster.

Implements: blueprint opendaylight-ha

Depends-On: Ic9a955a1c2afc040b2f9c6fb86573c04a60f9f31

Change-Id: Ie108ab75cce0cb7d89e72637c600e30fc241d186
Signed-off-by: Tim Rozet <trozet@redhat.com>

--- a/puppet/services/opendaylight-api.yaml
+++ b/puppet/services/opendaylight-api.yaml
@@ -24,7 +24,7 @@ parameters:
   OpenDaylightFeatures:
     description: List of features to install with ODL
     type: comma_delimited_list
-    default: ["odl-netvirt-openstack","odl-netvirt-ui"]
+    default: ["odl-netvirt-openstack","odl-netvirt-ui","odl-jolokia"]
   OpenDaylightApiVirtualIP:
     type: string
     default: ''
@@ -61,5 +61,6 @@ outputs:
                   - {get_param: OpenDaylightPort}
                   - 6640
                   - 6653
+                  - 2550
       step_config: |
         include tripleo::profile::base::neutron::opendaylight
