Composable service support for Cinder Dell EMC Storage Center
Updated the heat templates for Cinder Dell EMC Storage Center
Backend to use composable services

Closes-Bug: #1661314

Change-Id: I454549c45da7388f0e42975c9f4637dde9ec51e3

--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -413,10 +413,10 @@ topics:
             requires:
               - overcloud-resource-registry-puppet.yaml
           - file: environments/cinder-dellsc-config.yaml
-            title: Cinder Dell Storage Center ISCSI backend
+            title: Cinder Dell EMC Storage Center ISCSI backend
             description: >
-              Enables a Cinder Dell Storage Center ISCSI backend, configured
-              via puppet
+              Enables a Cinder Dell EMC Storage Center ISCSI backend,
+              configured via puppet
             requires:
               - overcloud-resource-registry-puppet.yaml
           - file: environments/cinder-hpelefthand-config.yaml
