multinode/upgrade: set heat::rpc_response_timeout to 600
Continue the work done on https://review.openstack.org/#/c/423302/

Change-Id: I931534e0ec33e131809186f74068eb479d38a0f9

--- a/ci/environments/multinode_major_upgrade.yaml
+++ b/ci/environments/multinode_major_upgrade.yaml
@@ -43,4 +43,5 @@ parameter_defaults:
     nova::compute::libvirt::libvirt_virt_type: qemu
     # Required for Centos 7.3 and Qemu 2.6.0
     nova::compute::libvirt::libvirt_cpu_mode: 'none'
+    heat::rpc_response_timeout: 600
   SwiftCeilometerPipelineEnabled: False
